--- a/app/templates/deck.html
+++ b/app/templates/deck.html
@@ -64,13 +64,12 @@
             >
               Cancel
             </button>
-            <button
+            <input
               type="submit"
-              id="sumbit-update-deck-btn"
+              id="submit-update-deck-btn"
               class="confirm-button"
-            >
-              Update
-            </button>
+              value="Update"
+            />
           </div>
         </form>
       </div>
@@ -111,13 +110,13 @@
             >
               Cancel
             </button>
-            <button
+            <input
               type="submit"
-              id="sumbit-create-deck-btn"
+              id="submit-create-deck-btn"
               class="confirm-button"
-            >
-              Create
-            </button>
+              value="Create"
+              disabled="true"
+            />
           </div>
         </form>
       </div>
@@ -139,13 +138,12 @@
               Cancel
             </button>
 
-            <button
+            <input
               type="submit"
-              id="sumbit-delete-all-btn"
+              id="submit-delete-all-btn"
               class="confirm-button"
-            >
-              Delete
-            </button>
+              value="Delete"
+            />
           </div>
         </form>
       </div>
