--- a/app/static/css/decks-style.css
+++ b/app/static/css/decks-style.css
@@ -1,43 +1,78 @@
 body {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 main {
-    flex: 1;
+  flex: 1;
 }
 
 .container {
-    margin: auto;
-    width: 100%;
+  margin: auto;
+  width: 100%;
 }
 
 #new-deck-btn {
-    background-color: #ffdc3f;
-    color: white;
+  background-color: #ffdc3f;
+  color: white;
 }
 
 #delete-all-btn {
-    background-color: #ff6b6b;
-    color: white;
+  background-color: #ff6b6b;
+  color: white;
 }
 
 #decks {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1em;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 1em 0;
+  width: 100%;
+  gap: 1em;
+  justify-content: center;
+  align-items: center;
 }
 
 .deck {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 40%;
-    min-height: 50px;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    border-radius: 0.5em;
+  display: flex;
+  flex-direction: column;
+
+  gap: 0.5em;
+  flex: 1;
+  min-width: 45%;
+  min-height: 100px;
 }
+
+.deck-name {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  padding: 1em;
+  flex: 1;
+
+  min-height: 50px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 0.5em;
+  width: 100%;
+
+  box-sizing: border-box;
+
+  text-align: center;
+  overflow: scroll;
+}
+
+.deck-action {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 0.5em;
+}
+.deck-action > span {
+  cursor: pointer;
+}
+
+input[type="submit"] {
+    flex: 1;
+}
+
