--- a/app/templates/help.html
+++ b/app/templates/help.html
@@ -65,7 +65,7 @@
         <div class="instruction-container-grid">
           <div class="instruction-container-small">
             <div class="icon-container">
-              <span class="material-symbols-outlined icon icon-blue">
+              <span class="material-symbols-outlined icon-small icon-blue">
                 add_circle
               </span>
               <h2>How do I create a deck?</h2>
