--- a/app/templates/quiz.html
+++ b/app/templates/quiz.html
@@ -15,12 +15,28 @@
         <h2>Total Time remaining <span></span></h2>
       </div>
 
+    <div class="error-modal modal">
+      {% with messages = get_flashed_messages() %} {% if messages %}
+      <div class="flashes">
+        <ul>
+          {% for message in messages %}
+          <li>{{ message }}</li>
+          {% endfor %}
+        </ul>
+        <button>
+          <span class="material-symbols-outlined icon-small"> close </span>
+        </button>
+      </div>
+      {% endif %} {% endwith %}
+    </div>
+
+    </div>
       <div
-      class="card-container"
-      data-deck-name="{{deck}}"
-      data-quiz-start="{{quiz.start_epoch}}"
-      data-quiz-end="{{quiz.end_epoch}}"
-      data-quiz-id="{{quiz.quiz_id}}">
+          class="card-container"
+          data-deck-name="{{deck}}"
+          data-quiz-start="{{quiz.start_epoch}}"
+          data-quiz-end="{{quiz.end_epoch}}"
+          data-quiz-id="{{quiz.quiz_id}}">
         {% for card_id, card in quiz.cards.items() %}
         <div
           class="card"
@@ -46,5 +62,6 @@
     </footer>
 
     <script src="/static/js/quiz.js"></script>
+    <script src="/static/js/errorModal.js"></script>
   </body>
 </html>
