--- a/app/static/css/common.css
+++ b/app/static/css/common.css
@@ -199,6 +199,22 @@ input[type="text"] {
   font-size: 16px !important;
 }
 
+.icon-big {
+    font-size: 10em;
+}
+
+.icon-green {
+  color: #22c55e;
+}
+
+.icon-blue {
+  color: #3b82f6;
+}
+
+.icon-red {
+  color: #ef4444;
+}
+
 .color-gray {
   color: #eaeaea;
 }
@@ -207,5 +223,46 @@ input[type="submit"]:disabled {
   background-color: #ccc;
   color: #fff;
   cursor: not-allowed;
+}
+
+.error-modal {
+    display: none;
+    justify-content: center;
+    align-items: flex-end;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+}
+
+.error-modal .flashes {
+    display: flex;
+    justify-content: space-between;
+
+
+    padding: 1em;
+    background-color: #ff6b6b;
+    color: white;
+    font-weight: bold;
+    width: 100%;
+    max-width: 800px;
+    border-radius: 0.5em 0.5em 0 0;
+}
+
+.error-modal .flashes ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.error-modal .flashes button {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    color: white;
+}
+
+.fade-out {
+    animation: fadeOut 0.5s ease-in-out;
 }
 
